--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
             <p>默认端口连接不上请切换备用端口连接</p>
             <p>默认端口使用[6667]; 备用端口[6668],[6669]</p>
             <p>默认SSL端口使用[6697]; 备用端口[6679]</p>
-            <a href="irc://IRC.DOMAN:6667"><strong>irc://IRC.DOMAN:6667</strong></a>
+            <a href="irc://IRC.DOMAN:6667"><strong>irc://IRC.DOMAN:6667</strong></a><br>
             <a href="ircs://IRC.DOMAN:6697"><strong>ircs://IRC.DOMAN:6697</strong></a>
             <h3>USENET</h3>
             <p>请使用任意新闻组客户端阅读</p>
@@ -120,10 +120,10 @@
     <div>
         <h1 class="tit">许可证|Licenses</h1>
 
-        <a href="https://www.gnu.org/licenses/">GNU开源许可</a>
-        <a href="https://creativecommons.org/licenses/">CC知识许可</a>
-        <a href="https://www.apache.org/licenses/">Apache开源许可</a>
-        <a href="https://www.mozilla.org/en-US/MPL/">MPL开源许可</a>
+        <a href="https://www.gnu.org/licenses/">GNU开源许可</a><br>
+        <a href="https://creativecommons.org/licenses/">CC知识许可</a><br>
+        <a href="https://www.apache.org/licenses/">Apache开源许可</a><br>
+        <a href="https://www.mozilla.org/en-US/MPL/">MPL开源许可</a><br>
         <p>除了以上许可证，其他许可证我们也在使用, 因为篇幅, 我们不再写其他的了</p>
     </div>
 
