--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
             <p>----</p>
             <p>加入相关服务后请仔细阅读motd</p>
             <p>欢迎您查看并审查我们的相关配置文件,给我们提出好的匿名及安全的意见和建议</p>
-            <p style="color: red;">管理运维组属于封闭不公开式群组聊天室, 加入请私聊任意聊天的NICK:arkfuture</p>
+            <p style="color: red;">管理运维组属于封闭不公开式群组聊天室, 若加入请私聊任意聊天的NICK:arkfuture</p>
         </div>
     <br>
         <div>
