--- a/index.html
+++ b/index.html
@@ -37,6 +37,7 @@
             <li><a href="">BiglyBT [#arkfuture_studio]</a></li>
             <li><a href="https://t.me/arkfuture_studio">Telegram [arkfuture_studio]</a></li>
             <li><a href="https://matrix.to/#/#arkfuture_studio:matrix.org">Matrix [#arkfuture_studio:matrix.org]</a></li>
+            <p>通常的, 成员名称通常不是真是姓名, 是自己的NICK(昵称)</p>
             <h3>社交</h3>
             <li><a href="https://x.com/arkfuturestudio">X [@arkfuturestudio]</a></li>
             <li><a href="https://www.facebook.com/ARKFUTURE">FACEBOOK & INS [@arkfuture]</a></li>
