--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
             <li><a href="https://x.com/arkfuturestudio">X [@arkfuturestudio]</a></li>
             <li><a href="https://www.facebook.com/ARKFUTURE">FACEBOOK & INS [@arkfuture]</a></li>
             <li><a href="https://infosec.exchange/@arkfuture">Mastodon [@arkfuture]</a></li>
-            <li><a href="mailto:ARKFUTURE@FOXMAIL.COM">发邮件给我</a></li>
+            <li><a href="mailto:ARKFUTURE@FOXMAIL.COM">发邮件给我(中继邮箱)</a></li>
         </div>
     <br>
         <div>
@@ -112,6 +112,13 @@
         <div>
             <h2>小组件</h2>
             <iframe src="/ARKFUTURE/HTML/zj.html" width="100%" height="300" frameborder="0"></iframe>
+        </div>
+    <br>
+        <div>
+            <h2>关于</h2>
+            <p>我们通常使用frp出网, 相关frp外网地址我们会特别标注</p>
+            <p>固定域名, 我们的管理运维人员正在讨论是否需要</p>
+            <p>在特殊时期我们会发出i2p地址; 请您使用i2p网络访问我们的相关服务(相关i2pd使用配置在我们的配置目录下)</p>
         </div>
     </div>
 
