--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
             <li><a href="https://x.com/arkfuturestudio">X [@arkfuturestudio]</a></li>
             <li><a href="https://www.facebook.com/ARKFUTURE">FACEBOOK & INS [@arkfuture]</a></li>
             <li><a href="https://infosec.exchange/@arkfuture">Mastodon [@arkfuture]</a></li>
-            <li><a href="mailto:ARKFUTURE@FOXMAIL.COM">发邮件给我(中继邮箱)</a></li>
+            <li><a href="mailto:ARKFUTURESTUDIO@GMAIL.COM">发邮件给我(中继邮箱)</a></li>
         </div>
     <br>
         <div>
