--- a/index.html
+++ b/index.html
@@ -37,12 +37,12 @@
             <li><a href="">BiglyBT [#arkfuture_studio]</a></li>
             <li><a href="https://t.me/arkfuture_studio">Telegram [arkfuture_studio]</a></li>
             <li><a href="https://matrix.to/#/#arkfuture_studio:matrix.org">Matrix [#arkfuture_studio:matrix.org]</a></li>
-            <p>通常的, 成员名称通常不是真是姓名, 是自己的NICK(昵称)</p>
+            <p>通常的, 聊天时成员名称通常不是自己的真实姓名, 而是是自己的NICK(昵称)</p>
             <h3>社交</h3>
             <li><a href="https://x.com/arkfuturestudio">X [@arkfuturestudio]</a></li>
             <li><a href="https://www.facebook.com/ARKFUTURE">FACEBOOK & INS [@arkfuture]</a></li>
             <li><a href="https://infosec.exchange/@arkfuture">Mastodon [@arkfuture]</a></li>
-            <li><a href="mailto:ARKFUTURESTUDIO@GMAIL.COM">发邮件给我(中继邮箱)</a></li>
+            <li><a href="mailto:ARKFUTURESTUDIO@GMAIL.COM">发邮件给我</a></li>
         </div>
     <br>
         <div>
@@ -82,7 +82,15 @@
             <p>----</p>
             <p>加入相关服务后请仔细阅读motd</p>
             <p>欢迎您查看并审查我们的相关配置文件,给我们提出好的匿名及安全的意见和建议</p>
-            <p style="color: red;">管理运维组属于封闭不公开式群组聊天室, 若加入请私聊任意聊天的NICK:arkfuture</p>
+            <a style="color: red;" href="#intranet">管理运维组和方舟安全实验室属于封闭且不公开的群组, 若申请加入请私聊任意聊天的NICK:arkfuture 管理运维拥有自己的内网账户</a>
+        </div>
+    <br>
+        <div>
+            <h2 id="intranet">内网及管理运维组</h2>
+            <p style="color: red;">由于内网的硬盘和服务有限,暂时仅供管理运维组和方舟安全实验室的伙伴们使用</p>
+            <p>我们的内网服务有:</p>
+            <p>资源分发: nas</p>
+            <p>项目及知识库: git</p>
         </div>
     <br>
         <div>
@@ -101,25 +109,10 @@
         </div>
     <br>
         <div>
-            <h2 id="intranet">内网及管理运维组服务</h2>
-            <p style="color: red;">内网须知:在聊天群组中中根据[motd/公告提示]申请内网账户</p>
-            <p>我们的内网服务有:</p>
-            <p>资源分发: nas</p>
-            <p>项目管理: git</p>
-            <p>内部文档与知识库: 待搭建</p>
-        </div>
-    <br>
-        <div>
             <h2>小组件</h2>
             <iframe src="/ARKFUTURE/HTML/zj.html" width="100%" height="300" frameborder="0"></iframe>
         </div>
     <br>
-        <div>
-            <h2>关于</h2>
-            <p>我们通常使用frp出网, 相关frp外网地址我们会特别标注</p>
-            <p>固定域名, 我们的管理运维人员正在讨论是否需要</p>
-            <p>在特殊时期我们会发出i2p地址; 请您使用i2p网络访问我们的相关服务(相关i2pd使用配置在我们的配置目录下)</p>
-        </div>
     </div>
 
     <br>
