--- a/index.html
+++ b/index.html
@@ -102,10 +102,10 @@
     <br>
         <div>
             <h2>订阅源 | RSS/FEED/ATOM</h2>
-            <a href="/ARKFUTURE/RES/rss.opml">常用的订阅源 [rss.opml] 文件更新频率:每周收集更新</a><br>
-            <a href="/ARKFUTURE/RES/newsrss.opml">社区新闻订阅源 [newsrss.opml] 文件更新频率:常用链接暂停更新</a><br>
+            <a href="/ARKFUTURE/RES/rss.opml">及时更新的订阅源 [rss.opml] 文件更新频率:每周更新</a><br>
+            <a href="/ARKFUTURE/RES/newsorbbs.opml">常用的社区及新闻订阅源 [bbs.opml] 文件更新频率:每月更新</a><br>
             <a href="/ARKFUTURE/RES/dm.opml">动漫订阅源 [dm.opml] 文件更新频率:未出现新链接时暂停更新</a><br>
-            <a href="/ARKFUTURE/RES/csrss.opml">网络空间安全订阅源 [csrss.opml] 文件更新频率:未出现新链接时暂停更新</a>
+            <a href="/ARKFUTURE/RES/cs.opml">网络空间安全咨询订阅源 [cs.opml] 文件更新频率:未出现新链接时暂停更新</a>
         </div>
     <br>
         <div>
@@ -151,14 +151,13 @@
 </body>
 <br>
 
-<!-- footer -->
+<!-- ARKFUTURE 标准 footer -->
 <footer>
     <center>
         <br>
         <p class="footer">方舟未来 | 方舟未来工作室(集团) | 方舟安全实验室</p>
-        <p class="footer">Copyright © 2020-∞ <a href="">ARKFUTURE</a> | <a href="">ARKFUTURE STUDIO(GROUP)</a> | <a
-                href="">ARK SRCURITY LAB</a>. All rights reserved. <br>All trademarks are the property of their
-            respective owners.</p>
+        <p class="footer">Copyright © 2020-∞ <a href="">ARKFUTURE</a> | <a href="">ARKFUTURE STUDIO(GROUP)</a> | <a href="">ARK SRCURITY LAB</a>. All rights reserved. <br>All trademarks are the property of their respective owners.</p>
+        <p class="footer">----ALL by ARKFUTURE Management and Operation Working Group</p>
     </center>
 </footer>
 
