--- a/index.html
+++ b/index.html
@@ -102,8 +102,9 @@
     <br>
         <div>
             <h2>订阅源 | RSS/FEED/ATOM</h2>
-            <a href="/ARKFUTURE/RES/rss.opml">及时更新的订阅源 [rss.opml] 文件更新频率:每周更新</a><br>
-            <a href="/ARKFUTURE/RES/newsorbbs.opml">常用的社区及新闻订阅源 [bbs.opml] 文件更新频率:每月更新</a><br>
+            <a href="/ARKFUTURE/RES/rss.opml">未分配待合并订阅源 [rss.opml] 文件更新频率:每周更新</a><br>
+            <a href="/ARKFUTURE/RES/news.opml">新闻订阅源 [news.opml] 文件更新频率:未出现新链接时暂停更新</a><br>
+            <a href="/ARKFUTURE/RES/bbs.opml">社区订阅源 [bbs.opml] 文件更新频率:未出现新链接时暂停更新</a><br>
             <a href="/ARKFUTURE/RES/dm.opml">动漫订阅源 [dm.opml] 文件更新频率:未出现新链接时暂停更新</a><br>
             <a href="/ARKFUTURE/RES/cs.opml">网络空间安全咨询订阅源 [cs.opml] 文件更新频率:未出现新链接时暂停更新</a>
         </div>
