--- a/index.html
+++ b/index.html
@@ -19,7 +19,6 @@
         <h1>ARKFUTURE</h1>
     </center>
 
-
     <div>
         <h1 class="tit">关于|About</h1>
 
@@ -28,21 +27,6 @@
             <p>您需阅读我们的公约以了解我们</p>
             <p>这不是一堆法律术语，但它们是关于什么是允许的指导方针。如果你不理解所有的西也没关系，但是大多数人会理解所说的要点。</p>
             <iframe src="/ARKFUTURE/HTML/ARKFUTURE.md" width="100%" height="150" frameborder="0">快速链接</iframe>
-        </div>
-    <br>
-        <div>
-            <h2>加入我们的开放社区 | JOIN US</h2>
-            <h3>社群开放聊天室</h3>
-            <li><a href="#balabala">IRC & USENET [#arkfuture_studio]</a></li>
-            <li><a href="">BiglyBT [#arkfuture_studio]</a></li>
-            <li><a href="https://t.me/arkfuture_studio">Telegram [arkfuture_studio]</a></li>
-            <li><a href="https://matrix.to/#/#arkfuture_studio:matrix.org">Matrix [#arkfuture_studio:matrix.org]</a></li>
-            <p>通常的, 聊天时成员名称通常不是自己的真实姓名, 而是是自己的NICK(昵称)</p>
-            <h3>社交</h3>
-            <li><a href="https://x.com/arkfuturestudio">X [@arkfuturestudio]</a></li>
-            <li><a href="https://www.facebook.com/ARKFUTURE">FACEBOOK & INS [@arkfuture]</a></li>
-            <li><a href="https://infosec.exchange/@arkfuture">Mastodon [@arkfuture]</a></li>
-            <li><a href="mailto:ARKFUTURESTUDIO@GMAIL.COM">发邮件给我</a></li>
         </div>
     <br>
         <div>
@@ -61,11 +45,30 @@
     <br>
         <div>
             <h2>站点 | WEB</h2>
+            <h3>相关网站</h3>
+            <a href="https://arkfuture.github.io/">GITHUB 镜像站点</a><br>
+            <a href="https://arkfuture.gitlab.io/">GITLAB 镜像站点</a><br>
             <a href="#intranet">内网</a><br>
-            <a href="https://github.com/ARKFUTURE/ARKFUTURE.github.io/tree/main/ARKFUTURE/CONFIG/" id="config">此链接的目录下均为相关服务的基础配置文件</a>
             <iframe src="/ARKFUTURE/HTML/fl.html" width="100%" height="150" frameborder="0">快速链接</iframe>
             <iframe src="/ARKFUTURE/HTML/link.html" width="100%" height="150" frameborder="0">常用链接</iframe>
-            
+            <h3>社交</h3>
+            <li><a href="https://x.com/arkfuturestudio">X [@arkfuturestudio]</a></li>
+            <li><a href="https://www.facebook.com/ARKFUTURE">FACEBOOK & INS [@arkfuture]</a></li>
+            <li><a href="https://infosec.exchange/@arkfuture">Mastodon [@arkfuture]</a></li>
+            <li><a href="mailto:ARKFUTURESTUDIO@GMAIL.COM">发邮件给我</a></li>
+            <h3>代码仓库</h3>
+            <li><a href="https://x.com/arkfuturestudio">Github [ARKFUTURE]</a></li>
+            <li><a href="https://x.com/arkfuturestudio">Gitlab [ARKFUTURE]</a></li>
+        </div>
+    <br>
+        <div>
+            <h2>加入我们的开放社区 | JOIN US</h2>
+            <h3>社群开放聊天室</h3>
+            <li><a href="#balabala">IRC & USENET [#arkfuture_studio]</a></li>
+            <li><a href="">BiglyBT [#arkfuture_studio]</a></li>
+            <li><a href="https://t.me/arkfuture_studio">Telegram [arkfuture_studio]</a></li>
+            <li><a href="https://matrix.to/#/#arkfuture_studio:matrix.org">Matrix [#arkfuture_studio:matrix.org]</a></li>
+            <p>通常的, 聊天时成员名称通常不是自己的真实姓名, 而是是自己的NICK(昵称)</p>         
         </div>
     <br>
         <div>
