--- a/index.html
+++ b/index.html
@@ -45,18 +45,15 @@
     <br>
         <div>
             <h2>站点 | WEB</h2>
-            <h3>相关网站</h3>
-            <a href="https://arkfuture.github.io/">GITHUB 镜像站点</a><br>
-            <a href="https://arkfuture.gitlab.io/">GITLAB 镜像站点</a><br>
-            <a href="#intranet">内网</a><br>
-            <iframe src="/ARKFUTURE/HTML/fl.html" width="100%" height="150" frameborder="0">快速链接</iframe>
-            <iframe src="/ARKFUTURE/HTML/link.html" width="100%" height="150" frameborder="0">常用链接</iframe>
-            <h3>社交</h3>
+            <p>网站 | WEBsite</p>
+            <a href="https://arkfuture.github.io/">GITHUB 镜像站</a><br>
+            <a href="https://arkfuture.gitlab.io/">GITLAB 镜像站</a><br>
+            <p>社交 | Social</p><br>
             <li><a href="https://x.com/arkfuturestudio">X [@arkfuturestudio]</a></li>
             <li><a href="https://www.facebook.com/ARKFUTURE">FACEBOOK & INS [@arkfuture]</a></li>
             <li><a href="https://infosec.exchange/@arkfuture">Mastodon [@arkfuture]</a></li>
             <li><a href="mailto:ARKFUTURESTUDIO@GMAIL.COM">发邮件给我</a></li>
-            <h3>代码仓库</h3>
+            <p>仓库 | Code Repository</p><br>
             <li><a href="https://x.com/arkfuturestudio">Github [ARKFUTURE]</a></li>
             <li><a href="https://x.com/arkfuturestudio">Gitlab [ARKFUTURE]</a></li>
         </div>
@@ -114,6 +111,8 @@
     <br>
         <div>
             <h2>小组件</h2>
+            <iframe src="/ARKFUTURE/HTML/fl.html" width="100%" height="150" frameborder="0">快速链接</iframe>
+            <iframe src="/ARKFUTURE/HTML/link.html" width="100%" height="150" frameborder="0">常用链接</iframe>
             <iframe src="/ARKFUTURE/HTML/zj.html" width="100%" height="300" frameborder="0"></iframe>
         </div>
     <br>
