--- a/index.html
+++ b/index.html
@@ -21,46 +21,40 @@
 
     <div>
         <h1 class="tit">关于|About</h1>
-
         <div>
             <h2>公约 | CONVENTION</h2>
-            <p>您需阅读我们的公约以了解我们</p>
-            <p>这不是一堆法律术语，但它们是关于什么是允许的指导方针。如果你不理解所有的西也没关系，但是大多数人会理解所说的要点。</p>
-            <iframe src="/ARKFUTURE/HTML/ARKFUTURE.md" width="100%" height="150" frameborder="0">快速链接</iframe>
+            <p>您需阅读我们的<a href="/ARKFUTURE/HTML/ARKFUTURE.md" width="100%" height="150" frameborder="0">公约</a>以了解我们</p> 
+            <p>这不是一堆法律术语，但它们是关于什么是允许的指导方针</p>
+            <a href="#ju">也欢迎各位伙伴加入我们的聊天室进行交流讨论</a>
         </div>
-    <br>
         <div>
-            <h2>公益 | PUBLIC WELFARE</h2>
-            <li><p>BeMyEyes 群组 : ARKFUTURE</p></li>
-            <li><p>街猫 群组 : ARKFUTURE</p></li>
-
+            <h2>此网页的向导 | Website Navigate</h2>
+            <li><a href="#ws">我们的网站和其他我们的网站的链接</a></li>
+            <li><a href="#ju">我们的开放社区聊天的相关链接 欢迎进入交流</a></li>
+            <li><a href="#balabala">我们irc和usenet的相关信息以及我们内部网络的信息</a></li>
+            <li><a href="#ju">加入我们的开放社区的聊天室一起聊天</a></li>
+            <li><a href="#vp">我们的代理服务, 订阅源服务和我们的网站小组件</a></li>
+            <li><a href="#so">我们的社交媒体, 欢迎各位朋友关注</a></li>
+            <li><a href="#li">我们的许可证以及我们的网站结束语</a></li>
         </div>
+    </div>
 
     <br>
     <hr>
 
     <div>
-        <h1 class="tit">ARKFUTURE NET</h1>
+        <h1 class="tit">ARKFUTURE-NET</h1>
         <P>以下所有服务均为ARKFUTRUE NET的一部分</P>
-    <br>
         <div>
-            <h2>站点 | WEB</h2>
-            <p>网站 | WEBsite</p>
-            <a href="https://arkfuture.github.io/">GITHUB 镜像站</a><br>
-            <a href="https://arkfuture.gitlab.io/">GITLAB 镜像站</a><br>
-            <p>社交 | Social</p><br>
-            <li><a href="https://x.com/arkfuturestudio">X [@arkfuturestudio]</a></li>
-            <li><a href="https://www.facebook.com/ARKFUTURE">FACEBOOK & INS [@arkfuture]</a></li>
-            <li><a href="https://infosec.exchange/@arkfuture">Mastodon [@arkfuture]</a></li>
-            <li><a href="mailto:ARKFUTURESTUDIO@GMAIL.COM">发邮件给我</a></li>
-            <p>仓库 | Code Repository</p><br>
-            <li><a href="https://x.com/arkfuturestudio">Github [ARKFUTURE]</a></li>
-            <li><a href="https://x.com/arkfuturestudio">Gitlab [ARKFUTURE]</a></li>
+            <h2 id="ws">网站 | WEB site</h2>
+            <li><a href="https://arkfuture.github.io/">镜像站</a></li>
+            <li><a href="https://arkfuture.gitlab.io/">镜像站</a></li>
+            <li><a href="https://x.com/arkfuturestudio">GITHUB [ARKFUTURE]</a></li>
+            <li><a href="https://x.com/arkfuturestudio">GITLAB [ARKFUTURE]</a></li>
         </div>
     <br>
         <div>
-            <h2>加入我们的开放社区 | JOIN US</h2>
-            <h3>社群开放聊天室</h3>
+            <h2 id="ju">开放社区 | JOIN US</h2>
             <li><a href="#balabala">IRC & USENET [#arkfuture_studio]</a></li>
             <li><a href="">BiglyBT [#arkfuture_studio]</a></li>
             <li><a href="https://t.me/arkfuture_studio">Telegram [arkfuture_studio]</a></li>
@@ -94,7 +88,7 @@
         </div>
     <br>
         <div>
-            <h2>代理 | PROXY & VPN</h2>
+            <h2 id="pv">代理 | PROXY & VPN</h2>
             <p>VPN使用SoftEtherVPN</p>
             <p>SOCKS5和HTTP的Mixed服务(代理), 端口:[5554]</p>
             <a href="/ARKFUTURE/RES/proxy.pac">PAC代理配置示例文件 [proxy.pac]</a>
@@ -122,7 +116,18 @@
     <hr>
 
     <div>
-        <h1 class="tit">许可证|Licenses</h1>
+        <h1 class="tit" id="so">社交 | Social</h1>
+        <li><a href="https://x.com/arkfuturestudio">X [@arkfuturestudio]</a></li>
+        <li><a href="https://www.facebook.com/ARKFUTURE">FACEBOOK & INS [@arkfuture]</a></li>
+        <li><a href="https://infosec.exchange/@arkfuture">Mastodon [@arkfuture]</a></li>
+        <li><a href="mailto:ARKFUTURESTUDIO@GMAIL.COM">发邮件给我</a></li>
+    </div>
+
+    <br>
+    <hr>
+
+    <div>
+        <h1 class="tit" id="li">许可证|Licenses</h1>
 
         <a href="https://www.gnu.org/licenses/">GNU开源许可</a><br>
         <a href="https://creativecommons.org/licenses/">CC知识许可</a><br>
