--- a/index.html
+++ b/index.html
@@ -76,12 +76,12 @@
             <p>----</p>
             <p>加入相关服务后请仔细阅读motd</p>
             <p>欢迎您查看并审查我们的相关配置文件,给我们提出好的匿名及安全的意见和建议</p>
-            <a style="color: red;" href="#intranet">管理运维组和方舟安全实验室属于封闭且不公开的群组, 若申请加入请私聊任意聊天的NICK:arkfuture 管理运维拥有自己的内网账户</a>
+            <a style="color: palevioletred;" href="#intranet">管理运维组和方舟安全实验室属于封闭且不公开的群组, 若申请加入请私聊任意聊天的NICK:arkfuture 管理运维拥有自己的内网账户</a>
         </div>
     <br>
         <div>
             <h2 id="intranet">内网及管理运维组</h2>
-            <p style="color: red;">由于内网的硬盘和服务有限,暂时仅供管理运维组和方舟安全实验室的伙伴们使用</p>
+            <p style="color: palevioletred;">由于内网的硬盘和服务有限,暂时仅供管理运维组和方舟安全实验室的伙伴们使用</p>
             <p>我们的内网服务有:</p>
             <p>资源分发: nas</p>
             <p>项目及知识库: git</p>
