--- a/index.html
+++ b/index.html
@@ -55,9 +55,10 @@
         <div>
             <h2 id="ju">开放社区 | JOIN US</h2>
             <li><a href="#balabala">IRC & USENET [#arkfuture_studio]</a></li>
-            <li><a href="">BiglyBT [#arkfuture_studio]</a></li>
             <li><a href="https://t.me/arkfuture_studio">Telegram [arkfuture_studio]</a></li>
             <li><a href="https://matrix.to/#/#arkfuture_studio:matrix.org">Matrix [#arkfuture_studio:matrix.org]</a></li>
+            <li><a href="">BiglyBT [#arkfuture_studio]</a></li>
+            <p>聊天消息平台不互通; 平台使用频率从高到底排序</p>     
             <p>通常的, 聊天时成员名称通常不是自己的真实姓名, 而是是自己的NICK(昵称)</p>         
         </div>
     <br>
