--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
         </div>
     <br>
         <div>
-            <h2 id="ju">开放社区 | JOIN US</h2>
+            <h2 id="ju">开源开放技术社区 | JOIN US</h2>
             <li><a href="#balabala">IRC & USENET [#arkfuture_studio]</a></li>
             <li><a href="https://t.me/arkfuture_studio">Telegram [arkfuture_studio]</a></li>
             <li><a href="https://matrix.to/#/#arkfuture_studio:matrix.org">Matrix [#arkfuture_studio:matrix.org]</a></li>
@@ -113,6 +113,7 @@
         <li><a href="https://x.com/arkfuturestudio">X [@arkfuturestudio]</a></li>
         <li><a href="https://www.facebook.com/ARKFUTURE">FACEBOOK & INS [@arkfuture]</a></li>
         <li><a href="https://infosec.exchange/@arkfuture">Mastodon [@arkfuture]</a></li>
+        <li><a href="https://t.me/arkfuture">Telegram [@arkfuture]</a></li>
         <li><a href="mailto:ARKFUTURESTUDIO@GMAIL.COM">发邮件给我</a></li>
     </div>
 
