--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <title>ARKFUTURE</title>
     <meta charset="UTF-8" version="1.7">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel="stylesheet" type="text/css" href="/css.css">
+    <!--<link rel="stylesheet" type="text/css" href="/css.css">-->
     <script src="/js.js"></script>
 </head>
 
