--- a/index.html
+++ b/index.html
@@ -43,22 +43,19 @@
 
     <div>
         <h1 class="tit">ARKFUTURE-NET</h1>
-        <P>以下所有服务均为ARKFUTRUE NET的一部分</P>
         <div>
             <h2 id="ws">网站 | WEB site</h2>
-            <li><a href="https://arkfuture.github.io/">镜像站</a></li>
-            <li><a href="https://arkfuture.gitlab.io/">镜像站</a></li>
-            <li><a href="https://x.com/arkfuturestudio">GITHUB [ARKFUTURE]</a></li>
-            <li><a href="https://x.com/arkfuturestudio">GITLAB [ARKFUTURE]</a></li>
+            <li><a href="https://arkfuture.github.io/">镜像站 GITHUB [ARKFUTURE]</a></li>
+            <li><a href="https://arkfuture.gitlab.io/">镜像站 GITLAB [ARKFUTURE]</a></li>
         </div>
     <br>
         <div>
             <h2 id="ju">开源开放技术社区 | JOIN US</h2>
-            <li><a href="#balabala">IRC & USENET [#arkfuture_studio]</a></li>
-            <li><a href="https://t.me/arkfuture_studio">Telegram [arkfuture_studio]</a></li>
+            <li><a href="#balabala">IRC [#arkfuture_studio]</a></li>
+            <li><a href="https://t.me/arkfuture_studio">Telegram [#arkfuture_studio]</a></li>
             <li><a href="https://matrix.to/#/#arkfuture_studio:matrix.org">Matrix [#arkfuture_studio:matrix.org]</a></li>
             <li><a href="">BiglyBT [#arkfuture_studio]</a></li>
-            <p>聊天消息平台不互通; 平台使用频率从高到底排序</p>     
+            <p>聊天消息平台不互通; 平台使用频率从高到底排序; 点击加入</p>     
             <p>通常的, 聊天时成员名称通常不是自己的真实姓名, 而是是自己的NICK(昵称)</p>         
         </div>
     <br>
@@ -90,15 +87,15 @@
     <br>
         <div>
             <h2>订阅源 | RSS/FEED/ATOM</h2>
-            <a href="/ARKFUTURE/RES/rss.opml">未分配待合并订阅源 [rss.opml] 文件更新频率:每周更新</a><br>
-            <a href="/ARKFUTURE/RES/news.opml">新闻订阅源 [news.opml] 文件更新频率:未出现新链接时暂停更新</a><br>
-            <a href="/ARKFUTURE/RES/bbs.opml">社区订阅源 [bbs.opml] 文件更新频率:未出现新链接时暂停更新</a><br>
-            <a href="/ARKFUTURE/RES/dm.opml">动漫订阅源 [dm.opml] 文件更新频率:未出现新链接时暂停更新</a><br>
-            <a href="/ARKFUTURE/RES/cs.opml">网络空间安全咨询订阅源 [cs.opml] 文件更新频率:未出现新链接时暂停更新</a>
+            <a href="/ARKFUTURE/RES/rss.opml">未分配待合并订阅源 [rss.opml]</a><br>
+            <a href="/ARKFUTURE/RES/news.opml">新闻订阅源 [news.opml]</a><br>
+            <a href="/ARKFUTURE/RES/bbs.opml">社区订阅源 [bbs.opml]</a><br>
+            <a href="/ARKFUTURE/RES/dm.opml">动漫订阅源 [dm.opml]</a><br>
+            <a href="/ARKFUTURE/RES/cs.opml">网络空间安全咨询订阅源 [cs.opml]</a>
         </div>
     <br>
         <div>
-            <h2>小组件</h2>
+            <h2>小组件 | Plugins</h2>
             <iframe src="/ARKFUTURE/HTML/fl.html" width="100%" height="150" frameborder="0">快速链接</iframe>
             <iframe src="/ARKFUTURE/HTML/link.html" width="100%" height="150" frameborder="0">常用链接</iframe>
             <iframe src="/ARKFUTURE/HTML/zj.html" width="100%" height="300" frameborder="0"></iframe>
@@ -111,11 +108,13 @@
 
     <div>
         <h1 class="tit" id="so">社交 | Social</h1>
+        <li><a href="https://t.me/arkfuture">Telegram 联系我[@arkfuture]</a></li>
+        <li><a href="https://infosec.exchange/@arkfuture">Mastodon 联系我[@arkfuture]</a></li>
+        <li><a href="mailto:ARKFUTURESTUDIO@GMAIL.COM">邮件 联系我[邮件地址正确]</a></li>
+        <p>----</p>
         <li><a href="https://x.com/arkfuturestudio">X [@arkfuturestudio]</a></li>
         <li><a href="https://www.facebook.com/ARKFUTURE">FACEBOOK & INS [@arkfuture]</a></li>
-        <li><a href="https://infosec.exchange/@arkfuture">Mastodon [@arkfuture]</a></li>
-        <li><a href="https://t.me/arkfuture">Telegram [@arkfuture]</a></li>
-        <li><a href="mailto:ARKFUTURESTUDIO@GMAIL.COM">发邮件给我</a></li>
+        <li><a href="https://infosec.exchange/@arkfuture">Mastodon</a></li>
     </div>
 
     <br>
@@ -144,7 +143,7 @@
             "任何职业都可以成为黑客.你可以是一个木匠黑客.不一定是高科技.只要与技能有关.并且倾心专注于你正在做的事情.你就可能成为黑客."
                                                                                 ----引自《黑客伦理与信息时代精神》
         </pre>
-        <p>我们也崇尚开源精神</p>
+        <p>我们也崇尚GNU精神, 相信开放可以共同进步</p>
         <p>我们倡导终身学习----不断积累可以让自己的人生变得丰富,不管工作与否</p>
         <p>INGO(国际非政府组织)&INPO(国际非营利组织)&OS(开源共创)&CL(持续学习)</p>
         <p>我们是一群追寻自己梦想的人</p>
@@ -157,10 +156,10 @@
 <!-- ARKFUTURE 标准 footer -->
 <footer>
     <center>
-        <br>
-        <p class="footer">方舟未来 | 方舟未来工作室(集团) | 方舟安全实验室</p>
-        <p class="footer">Copyright © 2020-∞ <a href="">ARKFUTURE</a> | <a href="">ARKFUTURE STUDIO(GROUP)</a> | <a href="">ARK SRCURITY LAB</a>. All rights reserved. <br>All trademarks are the property of their respective owners.</p>
-        <p class="footer">----ALL by ARKFUTURE Management and Operation Working Group</p>
+        <p>方舟未来 | 方舟未来工作室(集团) | 方舟安全实验室</p>
+        <p>Copyright © 2020-∞ <a href="">ARKFUTURE</a> | <a href="">ARKFUTURE STUDIO(GROUP)</a> | <a href="">ARK SRCURITY LAB</a>. All rights reserved.</p>
+        <p>All trademarks and resources are the property of their respective owners.</p>
+        <p>----ALL by ARKFUTURE Management and Operation Working Group</p>
     </center>
 </footer>
 
