--- a/index.html
+++ b/index.html
@@ -109,6 +109,7 @@
     <div>
         <h1 class="tit" id="so">社交 | Social</h1>
         <li><a href="https://t.me/arkfuture">Telegram 联系我[@arkfuture]</a></li>
+        <li><a href="https://matrix.org/">Matrix 联系我[@arkfuture]</a></li>
         <li><a href="https://infosec.exchange/@arkfuture">Mastodon 联系我[@arkfuture]</a></li>
         <li><a href="mailto:ARKFUTURESTUDIO@GMAIL.COM">邮件 联系我[邮件地址正确]</a></li>
         <p>----</p>
