--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
         <div>
             <h2 id="ws">网站 | WEB site</h2>
             <li><a href="https://arkfuture.github.io/">镜像站 GITHUB [ARKFUTURE]</a></li>
-            <li><a href="https://arkfuture.gitlab.io/">镜像站 GITLAB [ARKFUTURE]</a></li>
+            <li><a href="https://arkfuture.gitlab.io/">镜像站 GITLAB [ARKFUTURE] 主要用于资源</a></li>
         </div>
     <br>
         <div>
