--- a/index.html
+++ b/index.html
@@ -28,10 +28,128 @@
             <a href="#ju">也欢迎各位伙伴加入我们的聊天室进行交流讨论</a>
         </div>
         <div>
-            <h2>此网页的说明</h2>
-            <li><a href="">此站点是 arkfutrue.github.io 的文件资源镜像站点</a></li>
-            <li><a href="">仅用于存放下载资源</a></li>
-            <li><a href="https://arkfuture.gitlab.io/CONFIG/inspircd/make.sh">资源测试链接 在本站 arkfuture.gitlab.io</a></li>
+            <h2>此网页的向导 | Website Navigate</h2>
+            <li><a href="#ws">我们的网站和其他我们的网站的链接</a></li>
+            <li><a href="#ju">我们的开放社区聊天的相关链接 欢迎进入交流</a></li>
+            <li><a href="#balabala">我们irc和usenet的相关信息以及我们内部网络的信息</a></li>
+            <li><a href="#vp">我们的代理服务, 订阅源服务和我们的网站小组件</a></li>
+            <li><a href="#so">我们的社交媒体, 欢迎各位朋友关注</a></li>
+            <li><a href="#li">我们的许可证以及我们的网站结束语</a></li>
+        </div>
+    </div>
+
+    <br>
+    <hr>
+
+    <div>
+        <h1 class="tit">ARKFUTURE-NET</h1>
+        <div>
+            <h2 id="ws">网站 | WEB site</h2>
+            <li><a href="https://arkfuture.github.io/">镜像站 GITHUB [ARKFUTURE]</a></li>
+            <li><a href="https://arkfuture.gitlab.io/">镜像站 GITLAB [ARKFUTURE] 主要用于资源</a></li>
+        </div>
+    <br>
+        <div>
+            <h2 id="ju">开源开放技术社区 | JOIN US</h2>
+            <li><a href="#balabala">IRC [#arkfuture_studio]</a></li>
+            <li><a href="https://t.me/arkfuture_studio">Telegram [#arkfuture_studio]</a></li>
+            <li><a href="https://matrix.to/#/#arkfuture_studio:matrix.org">Matrix [#arkfuture_studio:matrix.org]</a></li>
+            <li><a href="">BiglyBT [#arkfuture_studio]</a></li>
+            <p>聊天消息平台不互通; 平台使用频率从高到底排序; 点击加入</p>     
+            <p>通常的, 聊天时成员名称通常不是自己的真实姓名, 而是是自己的NICK(昵称)</p>         
+        </div>
+    <br>
+        <div>
+            <h2 id="balabala">聊天及新闻组 | IRC&USENET</h2>
+            <h3>IRC</h3>
+            <p>默认端口连接不上请切换备用端口连接</p>
+            <p>默认端口使用[6667]; 备用端口[6668],[6669]</p>
+            <p>默认SSL端口使用[6697]; 备用端口[6679]</p>
+            <a href="irc://IRC.DOMAN:6667"><strong>irc://IRC.DOMAN:6667</strong></a><br>
+            <a href="ircs://IRC.DOMAN:6697"><strong>ircs://IRC.DOMAN:6697</strong></a>
+            <h3>USENET</h3>
+            <p>请使用任意新闻组客户端阅读</p>
+            <a href="news://NEWS.DOMAN"><strong>news://NEWS.DOMAN</strong></a>
+            <p>----</p>
+            <p>加入相关服务后请仔细阅读motd</p>
+            <p>欢迎您查看并审查我们的相关配置文件,给我们提出好的匿名及安全的意见和建议</p>
+            <p>----</p>
+            <p>内网和管理运维组信息请阅读相关MOTD及相关频道的公告</p>
+            <p>管理运维组和方舟安全实验室属于封闭且不公开的群组, 申请加入请私聊任意聊天的NICK:arkfuture</p>
+        </div>
+    <br>
+        <div>
+            <h2 id="pv">代理 | PROXY & VPN</h2>
+            <p>VPN使用SoftEtherVPN</p>
+            <p>SOCKS5和HTTP的Mixed服务(代理), 端口:[5554]</p>
+            <a href="/ARKFUTURE/RES/proxy.pac">PAC代理配置示例文件 [proxy.pac]</a>
+        </div>
+    <br>
+        <div>
+            <h2>订阅源 | RSS/FEED/ATOM</h2>
+            <a href="/ARKFUTURE/RES/rss.opml">未分配待合并订阅源 [rss.opml]</a><br>
+            <a href="/ARKFUTURE/RES/news.opml">新闻订阅源 [news.opml]</a><br>
+            <a href="/ARKFUTURE/RES/bbs.opml">社区订阅源 [bbs.opml]</a><br>
+            <a href="/ARKFUTURE/RES/dm.opml">动漫订阅源 [dm.opml]</a><br>
+            <a href="/ARKFUTURE/RES/cs.opml">网络空间安全咨询订阅源 [cs.opml]</a>
+        </div>
+    <br>
+        <div>
+            <h2>小组件 | Plugins</h2>
+            <iframe src="/ARKFUTURE/HTML/fl.html" width="100%" height="150" frameborder="0">快速链接</iframe>
+            <iframe src="/ARKFUTURE/HTML/link.html" width="100%" height="150" frameborder="0">常用链接</iframe>
+            <iframe src="/ARKFUTURE/HTML/zj.html" width="100%" height="300" frameborder="0"></iframe>
+        </div>
+    <br>
+    </div>
+
+    <br>
+    <hr>
+
+    <div>
+        <h1 class="tit" id="so">社交 | Social</h1>
+        <li><a href="https://t.me/arkfuture">Telegram 联系我[@arkfuture]</a></li>
+        <li><a href="https://matrix.org/">Matrix 联系我[@arkfuture]</a></li>
+        <li><a href="https://infosec.exchange/@arkfuture">Mastodon 联系我[@arkfuture]</a></li>
+        <li><a href="mailto:ARKFUTURESTUDIO@GMAIL.COM">邮件 联系我[邮件地址正确]</a></li>
+        <p>----</p>
+        <li><a href="https://x.com/arkfuturestudio">X [@arkfuturestudio]</a></li>
+        <li><a href="https://www.facebook.com/ARKFUTURE">FACEBOOK & INS [@arkfuture]</a></li>
+        <li><a href="https://infosec.exchange/@arkfuture">Mastodon</a></li>
+    </div>
+
+    <br>
+    <hr>
+
+    <div>
+        <h1 class="tit" id="li">许可证|Licenses</h1>
+
+        <a href="https://www.gnu.org/licenses/">GNU开源许可</a><br>
+        <a href="https://creativecommons.org/licenses/">CC知识许可</a><br>
+        <a href="https://www.apache.org/licenses/">Apache开源许可</a><br>
+        <a href="https://www.mozilla.org/en-US/MPL/">MPL开源许可</a><br>
+        <p>除了以上许可证，其他许可证我们也在使用, 因为篇幅, 我们不再写其他的了</p>
+    </div>
+
+    <br>
+    <hr>
+
+    <div>
+        <h1 class="tit">结束语|END</h1>
+
+        <p>我们崇尚黑客精神</p>
+        <pre>
+            黑客精神Hacker,这个词是用来形容那些热衷于解决问题,克服限制的人.
+
+            "任何职业都可以成为黑客.你可以是一个木匠黑客.不一定是高科技.只要与技能有关.并且倾心专注于你正在做的事情.你就可能成为黑客."
+                                                                                ----引自《黑客伦理与信息时代精神》
+        </pre>
+        <p>我们也崇尚GNU精神, 相信开放可以共同进步</p>
+        <p>我们倡导终身学习----不断积累可以让自己的人生变得丰富,不管工作与否</p>
+        <p>INGO(国际非政府组织)&INPO(国际非营利组织)&OS(开源共创)&CL(持续学习)</p>
+        <p>我们是一群追寻自己梦想的人</p>
+
+    </div>
 
 </body>
 <br>
