更新index.html，统一链接路径为大写形式

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
         <h1 class="tit">关于|About</h1>
         <div>
             <h2>公约 | CONVENTION</h2>
-            <p>您需阅读我们的<a href="/arkfuture/html/ARKFUTURE.md" width="100%" height="150" frameborder="0">公约及Warrant Canary</a>以了解我们</p> 
+            <p>您需阅读我们的<a href="/ARKFUTURE/HTML/ARKFUTURE.md" width="100%" height="150" frameborder="0">公约及Warrant Canary</a>以了解我们</p> 
             <p>这不是一堆法律术语，但它们是关于什么是允许的指导方针</p>
             <a href="#ju">也欢迎各位伙伴加入我们的聊天室进行交流讨论</a>
         </div>
@@ -72,25 +72,25 @@
             <h2 id="pv">代理 | PROXY & VPN</h2>
             <p>VPN使用SoftEtherVPN</p>
             <p>SOCKS5和HTTP的Mixed服务(代理), 端口:[5554]</p>
-            <li><a href="/arkfuture/res/proxy.pac">PAC代理配置示例文件 [proxy.pac]</a></li>
+            <li><a href="/ARKFUTURE/RES/proxy.pac">PAC代理配置示例文件 [proxy.pac]</a></li>
         </div>
     <br>
         <div>
         <h2>订阅源 | RSS/FEED/ATOM</h2>
         <ul>
-            <li><a href="/arkfuture/res/rss.opml">未分配待合并订阅源 [rss.opml]</a></li>
-            <li><a href="/arkfuture/res/news.opml">新闻订阅源 [news.opml]</a></li>
-            <li><a href="/arkfuture/res/bbs.opml">社区订阅源 [bbs.opml]</a></li>
-            <li><a href="/arkfuture/res/dm.opml">动漫订阅源 [dm.opml]</a></li>
-            <li><a href="/arkfuture/res/cs.opml">网络空间安全订阅源 [cs.opml]</a></li>
+            <li><a href="/ARKFUTURE/RES/rss.opml">未分配待合并订阅源 [rss.opml]</a></li>
+            <li><a href="/ARKFUTURE/RES/news.opml">新闻订阅源 [news.opml]</a></li>
+            <li><a href="/ARKFUTURE/RES/bbs.opml">社区订阅源 [bbs.opml]</a></li>
+            <li><a href="/ARKFUTURE/RES/dm.opml">动漫订阅源 [dm.opml]</a></li>
+            <li><a href="/ARKFUTURE/RES/cs.opml">网络空间安全订阅源 [cs.opml]</a></li>
         </ul>
         </div>
     <br>
         <div>
             <h2>小组件 | Plugins</h2>
-            <iframe src="/arkfuture/html/fl.html" width="100%" height="150" frameborder="0">快速链接</iframe>
-            <iframe src="/arkfuture/html/link.html" width="100%" height="150" frameborder="0">常用链接</iframe>
-            <iframe src="/arkfuture/html/zj.html" width="100%" height="300" frameborder="0"></iframe>
+            <iframe src="/ARKFUTURE/HTML/fl.html" width="100%" height="150" frameborder="0">快速链接</iframe>
+            <iframe src="/ARKFUTURE/HTML/link.html" width="100%" height="150" frameborder="0">常用链接</iframe>
+            <iframe src="/ARKFUTURE/HTML/zj.html" width="100%" height="300" frameborder="0"></iframe>
         </div>
     <br>
     </div>
