--- a/index.html
+++ b/index.html
@@ -64,6 +64,7 @@
             <li><a href="ircs://IRC.DOMAN:6697"><strong>ircs://IRC.DOMAN:6697</strong></a></li>
         </ul>
             <p>加入相关服务后请仔细阅读motd</p>
+            <p>我们建议您使用irssi及其相关插件来完整体验irc服务(包括有otr插件)</p>
             <p>欢迎您查看并审查我们的相关配置文件,给我们提出好的匿名及安全的意见和建议</p>
         </div>
     <br>
