更新index.html，添加语言属性，调整结构，优化iframe标签，改用div替代center标签

--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <!-- update 2024/11/28 -->
-<html>
+<html lang="zh" xml:lang="zh">
 
 <!-- head -->
 
@@ -15,9 +15,9 @@
 <!-- body -->
 
 <body>
-    <center>
+    <div style="text-align: center;">
         <h1>ARKFUTURE</h1>
-    </center>
+    </div>
 
     <div>
         <h1 class="tit">关于|About</h1>
@@ -72,7 +72,9 @@
             <h2 id="pv">代理 | PROXY & VPN</h2>
             <p>VPN使用SoftEtherVPN</p>
             <p>SOCKS5和HTTP的Mixed服务(代理), 端口:[5554]</p>
-            <li><a href="/ARKFUTURE/RES/proxy.pac">PAC代理配置示例文件 [proxy.pac]</a></li>
+            <ul>
+                <li><a href="/ARKFUTURE/RES/proxy.pac">PAC代理配置示例文件 [proxy.pac]</a></li>
+            </ul>
         </div>
     <br>
         <div>
@@ -88,9 +90,9 @@
     <br>
         <div>
             <h2>小组件 | Plugins</h2>
-            <iframe src="/ARKFUTURE/HTML/fl.html" width="100%" height="150" frameborder="0">快速链接</iframe>
-            <iframe src="/ARKFUTURE/HTML/link.html" width="100%" height="150" frameborder="0">常用链接</iframe>
-            <iframe src="/ARKFUTURE/HTML/zj.html" width="100%" height="300" frameborder="0"></iframe>
+            <iframe src="/ARKFUTURE/HTML/fl.html" width="100%" height="150" title="快速链接">快速链接</iframe>
+            <iframe src="/ARKFUTURE/HTML/link.html" width="100%" height="150" title="常用链接"></iframe>
+            <iframe src="/ARKFUTURE/HTML/zj.html" width="100%" height="300" title="小组件" style="border:none;"></iframe>
         </div>
     <br>
     </div>
@@ -151,13 +153,14 @@
 
 <!-- ARKFUTURE 标准 footer -->
 <footer>
-    <center>
+    <div style="text-align: center;">
         <p>方舟未来 | 方舟未来工作室(集团) | 方舟安全实验室</p>
         <p>Copyright © 2020-∞ <a href="">ARKFUTURE</a> | <a href="">ARKFUTURE STUDIO(GROUP)</a> | <a href="./ARKFUTURE/HTML/ARK.md">ARK SRCURITY LAB</a>. All rights reserved.</p>
         <p>All trademarks and resources are the property of their respective owners.</p>
         <p>----ALL by ARKFUTURE Management and Operation Working Group</p>
-    </center>
+    </div>
 </footer>
 
 
 </html>
+
