--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
         <div>
             <h2>公约 | CONVENTION</h2>
             <p>您需阅读我们的<a href="/ARKFUTURE/HTML/ARKFUTURE.md" width="100%" height="150" frameborder="0">公约及Warrant Canary</a>以了解我们</p> 
-            <p>这不是一堆法律术语，但它们是关于什么是允许的指导方针</p>
+            <p>这不是一堆法律术语,但它们是关于什么是允许的指导方针</p>
             <a href="#ju">也欢迎各位伙伴加入我们的聊天室进行交流讨论</a>
         </div>
     </div>
@@ -45,7 +45,7 @@
         <div>
             <h2 id="ju">加聊天室 | JOIN US</h2>
         <ul>
-            <li><a href="#irc">IRC [#arkfuture_studio]</a></li>
+            <li><a href="#irc">!IRC! [#arkfuture_studio]</a></li>
             <li><a href="https://t.me/arkfuture_studio">Telegram [#arkfuture_studio]</a></li>
             <li><a href="https://matrix.to/#/#arkfuture_studio:matrix.org">Matrix [#arkfuture_studio:matrix.org]</a></li>
             <li><a href="">BiglyBT [#arkfuture_studio]</a></li>
@@ -65,13 +65,15 @@
         </ul>
             <p>加入相关服务后请仔细阅读motd</p>
             <p>我们建议您使用irssi及其相关插件来完整体验irc服务(包括有otr插件)</p>
-            <p>欢迎您查看并审查我们的相关配置文件,给我们提出好的匿名及安全的意见和建议</p>
+            <p>请访问我们的github完整代码, 其中有irssi的配置文件</p>
+            <p>欢迎您查看并审查我们的相关服务器配置文件,给我们提出好的匿名及安全的意见和建议</p>
         </div>
     <br>
         <div>
             <h2 id="pv">代理 | PROXY & VPN</h2>
             <p>VPN使用SoftEtherVPN</p>
             <p>SOCKS5和HTTP的Mixed服务(代理), 端口:[5554]</p>
+            <p>我们假设我们的代理(proxy)服务器是:192.168.0.2, 那么配置文件是--</p>
             <ul>
                 <li><a href="/ARKFUTURE/RES/proxy.pac">PAC代理配置示例文件 [proxy.pac]</a></li>
             </ul>
@@ -103,12 +105,14 @@
     <div>
         <h1 class="tit" id="so">社交 | Social</h1>
     <ul>
-        <li><a href="https://t.me/arkfuture">Telegram 联系我[@arkfuture]</a></li>
-        <li><a href="https://matrix.org/">Matrix 联系我[@arkfuture]</a></li>
-        <li><a href="https://infosec.exchange/@arkfuture">Mastodon 联系我[@arkfuture]</a></li>
-        <li><a href="mailto:ARKFUTURESTUDIO@GMAIL.COM">邮件 联系我[邮件地址正确]</a></li>
-        <p>----</p>
-        <li><a href="https://x.com/arkfuturestudio">X [@arkfuturestudio]</a></li>
+        <p>联系我们</p>
+        <li><a href="https://t.me/arkfuture">Telegram</a></li>
+        <li><a href="https://matrix.org/">Matrix</a></li>
+        <li><a href="mailto:ARKFUTURESTUDIO@GMAIL.COM">邮件</a></li>
+        <li><a href="arkfuture@iptel.org">iptel.org</a></li>
+        <li><a href="arkfuture@xmpp.jp">xmpp.jp</a></li>
+        <p>订阅我们</p>
+        <li><a href="https://x.com/arkfuturestudio">X</a></li>
         <li><a href="https://www.facebook.com/ARKFUTURE">FACEBOOK & INS [@arkfuture]</a></li>
         <li><a href="https://infosec.exchange/@arkfuture">Mastodon</a></li>
     </ul>
@@ -125,7 +129,7 @@
         <li><a href="https://www.apache.org/licenses/">Apache开源许可</a></li>
         <li><a href="https://www.mozilla.org/en-US/MPL/">MPL开源许可</a></li>
     </ul>
-        <p>除了以上许可证，其他许可证我们也在使用, 因为篇幅, 我们不再写其他的了</p>
+        <p>除了以上许可证,其他许可证我们也在使用, 因为篇幅, 我们不再写其他的了</p>
     </div>
 
     <br>
@@ -164,3 +168,8 @@
 
 </html>
 
+<!--Thanks-->
+<!--ARKFUTURE team/group/studio and Friends-->
+<!--INSPIRCD https://www.inspircd.org/-->
+<!--IRSSI https://irssi.org/-->
+<!--https://hwkj.top/-->
