--- a/index.html
+++ b/index.html
@@ -92,9 +92,13 @@
     <br>
         <div>
             <h2>小组件 | Plugins</h2>
+            <p>----嵌入式小组件</p>
             <iframe src="/ARKFUTURE/HTML/fl.html" width="100%" height="150" title="快速链接">快速链接</iframe>
             <iframe src="/ARKFUTURE/HTML/link.html" width="100%" height="150" title="常用链接"></iframe>
             <iframe src="/ARKFUTURE/HTML/zj.html" width="100%" height="300" title="小组件" style="border:none;"></iframe>
+            <p>----F12小组件</p>
+            <P>查看当前UTC时间和已经访问网站的秒数</P>
+
         </div>
     <br>
     </div>
