--- a/index.html
+++ b/index.html
@@ -60,8 +60,8 @@
             <p>默认端口使用[6667]; 备用端口[6668],[6669]</p>
             <p>默认SSL端口使用[6697]; 备用端口[6679]</p>
         <ul>
-            <li><a href="#" id="irc-link"><strong>irc://IRC.DOMAN:6667</strong></a></li>
-            <li><a href="#" id="irc-link-ssl"><strong>ircs://IRC.DOMAN:6697</strong></a></li>
+            <li><a href="irc://IRC.DOMAN:6667" id="irc-link"><strong>irc://IRC.DOMAN:6667</strong></a></li>
+            <li><a href="ircs://IRC.DOMAN:6697" id="irc-link"><strong>ircs://IRC.DOMAN:6697</strong></a></li>
             <p>当前DOMAN写在F12的控制台中, 请查询后替换</p>
         </ul>
             <p>加入相关服务后请仔细阅读motd</p>
