--- a/ARKFUTURE/HTML/zj.html
+++ b/ARKFUTURE/HTML/zj.html
@@ -1,12 +1,25 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+    <style>
+
+        .container {
+
+            display: flex;
+
+            flex-direction: column; /* 垂直方向排列 */
+
+            gap: 10px; /* 可选：给图片之间添加一些间距 */
+
+        }
+
+    </style>
 </head>
 <body>
-    <center>
+    <div class="container">
         <img src="https://www.hamqsl.com/solar101vhfper.php">
         <img src="https://www.hamqsl.com/solar101vhfpic.php">
         <img src="https://www.hamqsl.com/solarmuf.php">
-    </center>
+    </div>
 </body>
 </html>
