优化zj.html中的图片排列样式，移除多余的CSS样式；调整index.html中iframe的高度

--- a/ARKFUTURE/HTML/zj.html
+++ b/ARKFUTURE/HTML/zj.html
@@ -1,22 +1,9 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <style>
-
-        .container {
-
-            display: flex;
-
-            flex-direction: column; /* 垂直方向排列 */
-
-            gap: 10px; /* 可选：给图片之间添加一些间距 */
-
-        }
-
-    </style>
 </head>
 <body>
-    <div class="container">
+    <div style="flex-direction: column;display: flex;">
         <img src="https://www.hamqsl.com/solar101vhfper.php">
         <img src="https://www.hamqsl.com/solar101vhfpic.php">
         <img src="https://www.hamqsl.com/solarmuf.php">
