--- a/ARKFUTURE/HTML/zj.html
+++ b/ARKFUTURE/HTML/zj.html
@@ -1,9 +1,18 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+    <style>
+        img {
+            width: 100%;
+            height: auto;
+        }
+        div {
+            display: flex;
+            flex-direction: column;
+        }
 </head>
 <body>
-    <div style="flex-direction: column;display: flex;">
+    <div>
         <img src="https://www.hamqsl.com/solar101vhfper.php">
         <img src="https://www.hamqsl.com/solar101vhfpic.php">
         <img src="https://www.hamqsl.com/solarmuf.php">
