--- a/index.html
+++ b/index.html
@@ -91,13 +91,13 @@
         </ul>
         </div>
     <br>
-        <div>
-            <h2>小组件 | Plugins</h2>
-            <p>----嵌入式小组件</p>
-            <iframe src="/ARKFUTURE/HTML/fl.html" width="380px" height="260px" style="border:none" title="快速链接"></iframe>
-            <iframe src="/ARKFUTURE/HTML/link.html" width="380px" height="260px" style="border:none" title="Link"></iframe>
-            <iframe src="/ARKFUTURE/HTML/zj.html" width="400px" height="260px" style="border:none" title="Embedded Widget"></iframe>
-        </div>
+    <div style="padding: 20px; text-align: center;">
+        <h2>小组件 | Plugins</h2>
+        <p>----嵌入式小组件</p>
+        <iframe src="/ARKFUTURE/HTML/fl.html" style="border: none; width: 100%; max-width: 400px; height: auto; margin: 0 auto; display: block;" title="快速链接"></iframe>
+        <iframe src="/ARKFUTURE/HTML/link.html" style="border: none; width: 100%; max-width: 400px; height: auto; margin: 20px auto 0; display: block;" title="Link"></iframe>
+        <iframe src="/ARKFUTURE/HTML/zj.html" style="border: none; width: 100%; max-width: 400px; height: auto; margin: 20px auto 0; display: block;" title="Embedded Widget"></iframe>
+    </div>
     <br>
     </div>
 
