优化index.html中小组件的iframe样式，移除多余的内联样式

--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@
         </ul>
         </div>
     <br>
-    <div style="padding: 20px; text-align: center;">
+    <div>
         <h2>小组件 | Plugins</h2>
         <p>----嵌入式小组件</p>
         <iframe src="/ARKFUTURE/HTML/fl.html" style="border: none; width: 100%; max-width: 400px; height: auto; margin: 0 auto; display: block;" title="快速链接"></iframe>
