--- a/index.html
+++ b/index.html
@@ -94,9 +94,9 @@
     <div>
         <h2>小组件 | Plugins</h2>
         <p>----嵌入式小组件</p>
-        <iframe src="/ARKFUTURE/HTML/fl.html" style="border: none; width: 100%; max-width: 400px; height: auto; margin: 0 auto; display: block;" title="快速链接"></iframe>
-        <iframe src="/ARKFUTURE/HTML/link.html" style="border: none; width: 100%; max-width: 400px; height: auto; margin: 20px auto 0; display: block;" title="Link"></iframe>
-        <iframe src="/ARKFUTURE/HTML/zj.html" style="border: none; width: 100%; max-width: 400px; height: auto; margin: 20px auto 0; display: block;" title="Embedded Widget"></iframe>
+        <iframe src="/ARKFUTURE/HTML/fl.html" style="border: none; width: 100%; max-width: 400px; height: auto; margin-left: 0; display: block;" title="快速链接"></iframe>
+        <iframe src="/ARKFUTURE/HTML/link.html" style="border: none; width: 100%; max-width: 400px; height: auto; margin: 20px 0 0; display: block;" title="Link"></iframe>
+        <iframe src="/ARKFUTURE/HTML/zj.html" style="border: none; width: 100%; max-width: 400px; height: auto; margin: 20px 0 0; display: block;" title="Embedded Widget"></iframe>
     </div>
     <br>
     </div>
