--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 <head>
     <title>ARKFUTURE</title>
     <meta charset="UTF-8" version="1.7">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, minimum-scale=1.0, maximum-scale=1.0, user-scalable=no">
     <!--<link rel="stylesheet" type="text/css" href="/css.css">-->
     <script src="/js.js"></script>
 </head>
