更新index.html中的链接，添加https协议以确保安全性；注释掉不必要的pre标签以改善代码可读性

--- a/index.html
+++ b/index.html
@@ -111,8 +111,8 @@
         <li><a href="https://t.me/arkfuture">Telegram</a></li>
         <li><a href="https://matrix.org/">Matrix</a></li>
         <li><a href="mailto:ARKFUTURESTUDIO@GMAIL.COM">邮件</a></li>
-        <li><a href="arkfuture@iptel.org">iptel.org</a></li>
-        <li><a href="arkfuture@xmpp.jp">xmpp.jp</a></li>
+        <li><a href="https://arkfuture@iptel.org">iptel.org</a></li>
+        <li><a href="https://arkfuture@xmpp.jp">xmpp.jp</a></li>
         <p>订阅我们</p>
         <li><a href="https://x.com/arkfuturestudio">X</a></li>
         <li><a href="https://www.facebook.com/ARKFUTURE">FACEBOOK & INS [@arkfuture]</a></li>
@@ -141,12 +141,12 @@
         <h1 class="tit">结束语|END</h1>
 
         <p>我们崇尚黑客精神</p>
-        <pre>
+        <!-- <pre>
             黑客精神Hacker,这个词是用来形容那些热衷于解决问题,克服限制的人.
 
             "任何职业都可以成为黑客.你可以是一个木匠黑客.不一定是高科技.只要与技能有关.并且倾心专注于你正在做的事情.你就可能成为黑客."
                                                                                 ----引自《黑客伦理与信息时代精神》
-        </pre>
+        </pre> -->
         <p>我们也崇尚GNU精神, 相信开放可以共同进步</p>
         <p>我们倡导终身学习----不断积累可以让自己的人生变得丰富,不管工作与否</p>
         <p>INGO(国际非政府组织)&INPO(国际非营利组织)&OS(开源共创)&CL(持续学习)</p>
