移除index.html中不必要的嵌入式小组件描述，优化代码可读性；调整pre标签的注释格式

--- a/index.html
+++ b/index.html
@@ -93,7 +93,6 @@
     <br>
     <div>
         <h2>小组件 | Plugins</h2>
-        <p>----嵌入式小组件</p>
         <iframe src="/ARKFUTURE/HTML/fl.html" style="border: none; width: 100%; max-width: 400px; height: auto; margin-left: 0; display: block;" title="快速链接"></iframe>
         <iframe src="/ARKFUTURE/HTML/link.html" style="border: none; width: 100%; max-width: 400px; height: auto; margin: 20px 0 0; display: block;" title="Link"></iframe>
         <iframe src="/ARKFUTURE/HTML/zj.html" style="border: none; width: 100%; max-width: 400px; height: auto; margin: 20px 0 0; display: block;" title="Embedded Widget"></iframe>
@@ -141,12 +140,12 @@
         <h1 class="tit">结束语|END</h1>
 
         <p>我们崇尚黑客精神</p>
-        <!-- <pre>
+        <pre>
             黑客精神Hacker,这个词是用来形容那些热衷于解决问题,克服限制的人.
 
             "任何职业都可以成为黑客.你可以是一个木匠黑客.不一定是高科技.只要与技能有关.并且倾心专注于你正在做的事情.你就可能成为黑客."
                                                                                 ----引自《黑客伦理与信息时代精神》
-        </pre> -->
+        </pre>
         <p>我们也崇尚GNU精神, 相信开放可以共同进步</p>
         <p>我们倡导终身学习----不断积累可以让自己的人生变得丰富,不管工作与否</p>
         <p>INGO(国际非政府组织)&INPO(国际非营利组织)&OS(开源共创)&CL(持续学习)</p>
