--- a/index.html
+++ b/index.html
@@ -57,12 +57,12 @@
         <div>
             <h2 id="irc">IRC服务 | IRC</h2>
             <p>默认端口连接不上请切换备用端口连接</p>
-            <p>默认端口使用[6667]; 备用端口[6668],[6669]</p>
-            <p>默认SSL端口使用[6697]; 备用端口[6679]</p>
+            <p>Default port:[noSSL:6667/SSL:6697]<br>Spare Port:[noSSL:6668-6670/SSL:9999]</p>
         <ul>
-            <li><a href="irc://IRC.DOMAIN:6667" id="irc-link"><strong>irc://IRC.DOMAN:6667</strong></a></li>
-            <li><a href="ircs://IRC.DOMAIN:6697" id="irc-link"><strong>ircs://IRC.DOMAN:6697</strong></a></li>
-            <p>当前DOMAIN写在F12的控制台中, 请查询后替换</p>
+            <li>
+                <a href="irc://IRC.DOMAN:6667" id="irc-link"><strong>noSSL</strong></a> 
+                <a href="ircs://IRC.DOMAN:6697" id="irc-link"><strong>SSL</strong></a> 
+            </li>
         </ul>
             <p>加入相关服务后请仔细阅读motd</p>
             <p>我们建议您使用irssi及其相关插件来完整体验irc服务(包括有otr插件)</p>
