--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
         <h1 class="tit">关于|About</h1>
         <div>
             <h2>公约 | CONVENTION</h2>
-            <p>您需阅读我们的<a href="/ARKFUTURE/HTML/ARKFUTURE.md" width="100%" height="150" frameborder="0">公约及Warrant Canary</a>以了解我们</p> 
+            <p>您需阅读我们的<a href="/ARKFUTURE/HTML/ARKFUTURE.md" width="100%" height="150" frameborder="0">公约</a>及<a href="/ARKFUTURE/HTML/warrant-canary.md" width="100%" height="150" frameborder="0">Warrant Canary</a>以了解我们</p> 
             <p>这不是一堆法律术语,但它们是关于什么是允许的指导方针</p>
             <a href="#ju">也欢迎各位伙伴加入我们的聊天室进行交流讨论</a>
         </div>
