--- a/index.html
+++ b/index.html
@@ -8,6 +8,9 @@
     <title>ARKFUTURE</title>
     <meta charset="UTF-8" version="1.7">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, minimum-scale=1.0, maximum-scale=1.0, user-scalable=no">
+    <meta http-equiv="Cache-Control" content="no-cache, no-store, must-revalidate">
+    <meta http-equiv="Pragma" content="no-cache">
+    <meta http-equiv="Expires" content="0">
     <!--<link rel="stylesheet" type="text/css" href="/css.css">-->
     <script src="/js.js"></script>
 </head>
