--- a/index.html
+++ b/index.html
@@ -166,6 +166,7 @@
         <p>Copyright © 2020-∞ <a href="">ARKFUTURE</a> | <a href="">ARKFUTURE STUDIO(GROUP)</a> | <a href="./ARKFUTURE/HTML/ARK.md">ARK SRCURITY LAB</a>. All rights reserved.</p>
         <p>All trademarks and resources are the property of their respective owners.</p>
         <p>----ALL by ARKFUTURE Management and Operation Working Group</p>
+        <div id="tiMe"></div>
     </div>
 </footer>
 
