在页面底部添加cookie信息显示，并在页面加载时更新该信息

--- a/index.html
+++ b/index.html
@@ -167,6 +167,9 @@
         <p>All trademarks and resources are the property of their respective owners.</p>
         <p>----ALL by ARKFUTURE Management and Operation Working Group</p>
         <div id="tiMe"></div>
+        <script>
+        document.getElementById('tiMe').textContent = String(document.cookie.split(';  '));
+        </script>
     </div>
 </footer>
 
