--- a/index.html
+++ b/index.html
@@ -96,9 +96,11 @@
     <br>
     <div>
         <h2>小组件 | Plugins</h2>
-        <iframe src="/ARKFUTURE/HTML/fl.html" style="border: none; width: 100%; max-width: 400px; height: auto; margin-left: 0; display: block;" title="快速链接"></iframe>
-        <iframe src="/ARKFUTURE/HTML/link.html" style="border: none; width: 100%; max-width: 400px; height: auto; margin: 20px 0 0; display: block;" title="Link"></iframe>
-        <iframe src="/ARKFUTURE/HTML/zj.html" style="border: none; width: 100%; max-width: 400px; height: auto; margin: 20px 0 0; display: block;" title="Embedded Widget"></iframe>
+        <ul>
+            <li><a href="/ARKFUTURE/HTML/fl.html" style="border: none; width: 100%; max-width: 400px; height: auto; margin-left: 0; display: block;" title="快速链接">快速链接</a></li>
+            <li><a href="/ARKFUTURE/HTML/link.html" style="border: none; width: 100%; max-width: 400px; height: auto; margin: 20px 0 0; display: block;" title="Link">部分链接</a></li>
+            <li><iframe src="/ARKFUTURE/HTML/zj.html" style="border: none; width: 100%; max-width: 400px; height: auto; margin: 20px 0 0; display: block;" title="Embedded Widget"></iframe></li>
+        </ul>
     </div>
     <br>
     </div>
