``` 没有代码更改 ```

--- a/index.html
+++ b/index.html
@@ -155,7 +155,7 @@
         <p>我们倡导终身学习----不断积累可以让自己的人生变得丰富,不管工作与否</p>
         <p>INGO(国际非政府组织)&INPO(国际非营利组织)&OS(开源共创)&CL(持续学习)</p>
         <p>我们是一群追寻自己梦想的人</p>
-        <p>团队成员评审推荐技术用系统(暂定):Parrotsec,Kali,Tails,Whonix,Qubes</p>
+        <p>团队成员评审推荐技术用系统(暂定):Parrotsec,Kali,Tails,Qubes</p>
 
     </div>
 
