更新团队成员评审推荐的技术系统列表，修正描述中的措辞

--- a/index.html
+++ b/index.html
@@ -155,7 +155,7 @@
         <p>我们倡导终身学习----不断积累可以让自己的人生变得丰富,不管工作与否</p>
         <p>INGO(国际非政府组织)&INPO(国际非营利组织)&OS(开源共创)&CL(持续学习)</p>
         <p>我们是一群追寻自己梦想的人</p>
-        <p>团队成员评审推荐技术用系统:{红蓝对抗:Parrotsec,Kali,blackarch;隐私:Tails,Qubes;OSINT开源情报及恶意软件分析:tsurugi-linux,REMnux,tracelabs.org,sherlock-linux}且排名分先后</p>
+        <p>团队成员评审出推荐技术用系统:{红蓝对抗:Parrotsec,Kali,blackarch;隐私:Tails,Qubes;OSINT开源情报及恶意软件分析:tsurugi-linux,REMnux,tracelabs.org,sherlock-linux}且排名分先后</p>
 
     </div>
 
